fix image aspect ratio in css and double border around phoronix articles

--- a/data/ArticleView/style.css
+++ b/data/ArticleView/style.css
@@ -44,6 +44,7 @@ figure {
 img {
   border: 0;
   box-sizing: content-box;
+  height: auto;
 }
 ol,
 ul {
